###### TWE 5.5-1 RELEASED ######

###### TWE 5.4-1 RELEASED (2016-08-06) ######
2016-07-25 Sasa Bojanic <sasaboy@together.at>
   # External package relative path references on windows are now written using "/" character as file separator so 
     XPDL with external packages can be used cross-platform
   # Fix: now properly removing ActivitySet's Pools, Artifacts and Associations when deleting their WorkflowProcess container 
   
2016-07-25 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: SharkDisplayGenerator differently present WorkflowProcess name in GUI (category variable value information is appended)

2016-07-20 Sasa Bojanic <sasaboy@together.at>
   # Changed StandardDisplayGenerator to differently present package name in GUI
   # Shark mode: Introduced SharkDisplayGenerator to differently present package name in GUI

2016-07-02 Sasa Bojanic <sasaboy@together.at>
   # Now also calculating references to variables in the Lane's performer element

2016-06-29 Sasa Bojanic <sasaboy@together.at>
   # Improved validation for XPath tool agent

2016-06-10 Sasa Bojanic <sasaboy@together.at>
   # Now explicitly using XALAN for transformations (problem with saxon and namespaces)

2016-05-17 Sasa Bojanic <sasaboy@together.at>
   # Fixed: when action to insert missing start/end events is executed, undo was not working properly any more. This issue was introduced in version 5.1-1.

2016-05-16 Sasa Bojanic <sasaboy@together.at>
   # Corrected marking of validation errors/warning in the tree-view
   # Shark mode: Added support for PowerShellToolAgent

2016-04-26 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: fix for displaying WorkflowProcess panel for the external package's workflow process

2016-04-25 Sasa Bojanic <sasaboy@together.at>
   # New sub-section added to manual: "How to show transition conditions vs. names in the graph"

2016-04-21 Sasa Bojanic <sasaboy@together.at>
   # Implemented Graph print action

2016-04-19 Sasa Bojanic <sasaboy@together.at>