@@ -11569,7 +11569,8 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
 
       <itemizedlist>
         <listitem>
-          <para/>
+          <para>Fixed issue when transition is selected when clicked on the
+          activity</para>
         </listitem>
       </itemizedlist>
     </section>
