@@ -1,4 +1,6 @@
 ###### TWE 5.5-1 RELEASED ######
+2016-09-08 Sasa Bojanic <sasaboy@together.at>
+   # Fixed issue when transition is selected when clicked on the activity
 
 ###### TWE 5.4-1 RELEASED (2016-08-06) ######
 2016-07-25 Sasa Bojanic <sasaboy@together.at>
